// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable aggregate 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-top: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c8 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c11 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: top;
}

.c4 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c3:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    border-top: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1 c2"
  >
    <thead
      className=""
    >
      <tr
        className="c3 c4"
      >
        <th
          className="c5"
          scope="col"
        >
          <div
            className="c6"
          >
            <span
              className="c7"
            >
              A
            </span>
          </div>
        </th>
        <th
          className="c5"
          scope="col"
        >
          <div
            className="c6"
          >
            <span
              className="c7"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <tr
        className="c3 c4"
      >
        <th
          className="c8"
          scope="row"
        >
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              one
            </span>
          </div>
        </th>
        <td
          className="c8"
        >
          <div
            className="c9"
          >
            <span
              className="c7"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        className="c3 c4"
      >
        <th
          className="c8"
          scope="row"
        >
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              two
            </span>
          </div>
        </th>
        <td
          className="c8"
        >
          <div
            className="c9"
          >
            <span
              className="c7"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
    <tfoot
      className=""
    >
      <tr
        className="c4"
      >
        <td
          className="c11"
        >
          <div
            className="c12"
          />
        </td>
        <td
          className="c11"
        >
          <div
            className="c12"
          >
            <span
              className="c7"
            >
              3
            </span>
          </div>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`DataTable basic 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c8 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c4 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c3:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1 c2"
  >
    <thead
      className=""
    >
      <tr
        className="c3 c4"
      >
        <th
          className="c5"
          scope="col"
        >
          <div
            className="c6"
          >
            <span
              className="c7"
            >
              A
            </span>
          </div>
        </th>
        <th
          className="c5"
          scope="col"
        >
          <div
            className="c6"
          >
            <span
              className="c7"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <tr
        className="c3 c4"
      >
        <th
          className="c8"
          scope="row"
        >
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              one
            </span>
          </div>
        </th>
        <td
          className="c8"
        >
          <div
            className="c9"
          >
            <span
              className="c7"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        className="c3 c4"
      >
        <th
          className="c8"
          scope="row"
        >
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              two
            </span>
          </div>
        </th>
        <td
          className="c8"
        >
          <div
            className="c9"
          >
            <span
              className="c7"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable click 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c9 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c4 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
}

.c11 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c3:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

.c8 {
  cursor: pointer;
}

.c8:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  class="c0"
>
  <table
    class="c1 c2"
  >
    <thead
      class=""
    >
      <tr
        class="c3 c4"
      >
        <th
          class="c5"
          scope="col"
        >
          <div
            class="c6"
          >
            <span
              class="c7"
            >
              A
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class=""
      tabindex="0"
    >
      <tr
        class="c8 c4"
      >
        <th
          class="c9"
          scope="row"
        >
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              alpha
            </span>
          </div>
        </th>
      </tr>
      <tr
        class="c8 c4"
      >
        <th
          class="c9"
          scope="row"
        >
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              beta
            </span>
          </div>
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable click 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <table
    class="StyledDataTable-xrlyjm-0 tpKnu StyledTable-sc-1m3u5g-6 fGUmP"
  >
    <thead
      class="StyledDataTable__StyledDataTableHeader-xrlyjm-3 gtdqEW StyledTable__StyledTableHeader-sc-1m3u5g-4 dHaGyd"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 dBBtdf StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 hNAgVv"
          scope="col"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 folWQp"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fWSbXS"
            >
              A
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="StyledDataTable__StyledDataTableBody-xrlyjm-2 bFXxPv StyledTable__StyledTableBody-sc-1m3u5g-3 dwInxx"
      tabindex="0"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 OMrWP StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
          scope="row"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bnqisW"
            >
              alpha
            </span>
          </div>
        </th>
      </tr>
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 OMrWP StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
          scope="row"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bnqisW"
            >
              beta
            </span>
          </div>
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable empty 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c3:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1 c2"
  >
    <thead
      className=""
    >
      <tr
        className="c3 c4"
      />
    </thead>
    <tbody
      className=""
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    />
  </table>
</div>
`;

exports[`DataTable footer 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-top: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c8 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c11 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: top;
}

.c4 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c3:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    border-top: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1 c2"
  >
    <thead
      className=""
    >
      <tr
        className="c3 c4"
      >
        <th
          className="c5"
          scope="col"
        >
          <div
            className="c6"
          >
            <span
              className="c7"
            >
              A
            </span>
          </div>
        </th>
        <th
          className="c5"
          scope="col"
        >
          <div
            className="c6"
          >
            <span
              className="c7"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <tr
        className="c3 c4"
      >
        <th
          className="c8"
          scope="row"
        >
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              one
            </span>
          </div>
        </th>
        <td
          className="c8"
        >
          <div
            className="c9"
          >
            <span
              className="c7"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        className="c3 c4"
      >
        <th
          className="c8"
          scope="row"
        >
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              two
            </span>
          </div>
        </th>
        <td
          className="c8"
        >
          <div
            className="c9"
          >
            <span
              className="c7"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
    <tfoot
      className=""
    >
      <tr
        className="c4"
      >
        <td
          className="c11"
        >
          <div
            className="c12"
          >
            <span
              className="c10"
            >
              Total
            </span>
          </div>
        </td>
        <td
          className="c11"
        >
          <div
            className="c12"
          />
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`DataTable groupBy 1`] = `
.c8 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: rgba(0,0,0,0.33);
  stroke: rgba(0,0,0,0.33);
}

.c8 g {
  fill: inherit;
  stroke: inherit;
}

.c8 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c8 *[stroke*="#"],
.c8 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c8 *[fill-rule],
.c8 *[FILL-RULE],
.c8 *[fill*="#"],
.c8 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  padding: 6px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c9 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c13 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  width: 48px;
  max-width: 48px;
  overflow: hidden;
  vertical-align: top;
}

.c4 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c11 {
  font-size: 18px;
  line-height: 24px;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  width: 100%;
  height: 100%;
  max-width: none;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c6:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c3:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

@media only screen and (max-width:768px) {
  .c10 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    padding: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    padding: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  class="c0"
>
  <table
    class="c1 c2"
  >
    <thead
      class=""
    >
      <tr
        class="c3 c4"
      >
        <td
          class="c5"
        >
          <button
            aria-label="expand"
            class="c6"
            type="button"
          >
            <div
              class="c7"
            >
              <svg
                aria-label="FormDown"
                class="c8"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="c9"
          scope="col"
        >
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              A
            </span>
          </div>
        </th>
        <th
          class="c9"
          scope="col"
        >
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class="c3 c4"
      >
        <td
          class="c5"
        >
          <button
            aria-label="expand"
            class="c6"
            type="button"
          >
            <div
              class="c12"
            >
              <svg
                aria-label="FormDown"
                class="c8"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="c13"
          scope="row"
        >
          <div
            class="c14"
          >
            <span
              class="c11"
            >
              one
            </span>
          </div>
        </th>
        <td
          class="c13"
        >
          <div
            class="c14"
          />
        </td>
      </tr>
      <tr
        class="c3 c4"
      >
        <td
          class="c5"
        >
          <button
            aria-label="expand"
            class="c6"
            type="button"
          >
            <div
              class="c12"
            >
              <svg
                aria-label="FormDown"
                class="c8"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="c13"
          scope="row"
        >
          <div
            class="c14"
          >
            <span
              class="c11"
            >
              two
            </span>
          </div>
        </th>
        <td
          class="c13"
        >
          <div
            class="c14"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable groupBy 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <table
    class="StyledDataTable-xrlyjm-0 tpKnu StyledTable-sc-1m3u5g-6 fGUmP"
  >
    <thead
      class="StyledDataTable__StyledDataTableHeader-xrlyjm-3 gtdqEW StyledTable__StyledTableHeader-sc-1m3u5g-4 dHaGyd"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 dBBtdf StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <td
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezoiKY"
        >
          <button
            aria-label="expand"
            class="StyledButton-sc-323bzc-0 gSzznR"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 gFEOoP"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 eoTmgW"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 hNAgVv"
          scope="col"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 folWQp"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fWSbXS"
            >
              A
            </span>
          </div>
        </th>
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 hNAgVv"
          scope="col"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 folWQp"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fWSbXS"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="StyledDataTable__StyledDataTableBody-xrlyjm-2 bFXxPv StyledTable__StyledTableBody-sc-1m3u5g-3 dwInxx"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 dBBtdf StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <td
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezoiKY"
        >
          <button
            aria-label="expand"
            class="StyledButton-sc-323bzc-0 gSzznR"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 emftoK"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 eoTmgW"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
          scope="row"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fWSbXS"
            >
              one
            </span>
          </div>
        </th>
        <td
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          />
        </td>
      </tr>
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 dBBtdf StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <td
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezoiKY"
        >
          <button
            aria-label="expand"
            class="StyledButton-sc-323bzc-0 gSzznR"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 emftoK"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 eoTmgW"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
          scope="row"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fWSbXS"
            >
              two
            </span>
          </div>
        </th>
        <td
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable paths 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c3 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

@media only screen and (max-width:768px) {
  .c5 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1 c2"
  >
    <thead
      className=""
    >
      <tr
        className="c3"
      >
        <th
          className="c4"
          scope="col"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              A
            </span>
          </div>
        </th>
        <th
          className="c4"
          scope="col"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className="c3"
      >
        <th
          className="c7"
          scope="row"
        >
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              one
            </span>
          </div>
        </th>
        <td
          className="c7"
        >
          <div
            className="c8"
          >
            <span
              className="c6"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        className="c3"
      >
        <th
          className="c7"
          scope="row"
        >
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              two
            </span>
          </div>
        </th>
        <td
          className="c7"
        >
          <div
            className="c8"
          >
            <span
              className="c6"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable primaryKey 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c8 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c4 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c3:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1 c2"
  >
    <thead
      className=""
    >
      <tr
        className="c3 c4"
      >
        <th
          className="c5"
          scope="col"
        >
          <div
            className="c6"
          >
            <span
              className="c7"
            >
              A
            </span>
          </div>
        </th>
        <th
          className="c5"
          scope="col"
        >
          <div
            className="c6"
          >
            <span
              className="c7"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <tr
        className="c3 c4"
      >
        <td
          className="c8"
        >
          <div
            className="c9"
          >
            <span
              className="c7"
            >
              one
            </span>
          </div>
        </td>
        <th
          className="c8"
          scope="row"
        >
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              1
            </span>
          </div>
        </th>
      </tr>
      <tr
        className="c3 c4"
      >
        <td
          className="c8"
        >
          <div
            className="c9"
          >
            <span
              className="c7"
            >
              two
            </span>
          </div>
        </td>
        <th
          className="c8"
          scope="row"
        >
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              2
            </span>
          </div>
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable resizeable 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  padding: 0px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-right: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding: 0px;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c11 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c4 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c8 {
  font-size: 18px;
  line-height: 24px;
}

.c13 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c9 {
  cursor: col-resize;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c3:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

@media only screen and (max-width:768px) {
  .c7 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    border-right: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    padding: 0px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1 c2"
  >
    <thead
      className=""
    >
      <tr
        className="c3 c4"
      >
        <th
          className="c5"
          scope="col"
        >
          <div
            className="c6"
          >
            <div
              className="c7"
            >
              <span
                className="c8"
              >
                A
              </span>
            </div>
            <div
              className="c9 c10"
              onMouseDown={[Function]}
            />
          </div>
        </th>
        <th
          className="c5"
          scope="col"
        >
          <div
            className="c6"
          >
            <div
              className="c7"
            >
              <span
                className="c8"
              >
                B
              </span>
            </div>
            <div
              className="c9 c10"
              onMouseDown={[Function]}
            />
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <tr
        className="c3 c4"
      >
        <th
          className="c11"
          scope="row"
        >
          <div
            className="c12"
          >
            <span
              className="c13"
            >
              one
            </span>
          </div>
        </th>
        <td
          className="c11"
        >
          <div
            className="c12"
          >
            <span
              className="c8"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        className="c3 c4"
      >
        <th
          className="c11"
          scope="row"
        >
          <div
            className="c12"
          >
            <span
              className="c13"
            >
              two
            </span>
          </div>
        </th>
        <td
          className="c11"
        >
          <div
            className="c12"
          >
            <span
              className="c8"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable search 1`] = `
.c10 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: rgba(0,0,0,0.33);
  stroke: rgba(0,0,0,0.33);
}

.c10 g {
  fill: inherit;
  stroke: inherit;
}

.c10 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c10 *[stroke*="#"],
.c10 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c10 *[fill-rule],
.c10 *[FILL-RULE],
.c10 *[fill*="#"],
.c10 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c11 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c4 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c8 {
  font-size: 18px;
  line-height: 24px;
}

.c13 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c9 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c9:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c3:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

@media only screen and (max-width:768px) {
  .c12 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  class="c0"
>
  <table
    class="c1 c2"
  >
    <thead
      class=""
    >
      <tr
        class="c3 c4"
      >
        <th
          class="c5"
          scope="col"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                A
              </span>
            </div>
            <button
              aria-label="focus-search-a"
              class="c9"
              type="button"
            >
              <svg
                aria-label="FormSearch"
                class="c10"
                viewBox="0 0 24 24"
              >
                <path
                  d="M13.8,13.8 L18,18 L13.8,13.8 Z M10.5,15 C12.9852814,15 15,12.9852814 15,10.5 C15,8.01471863 12.9852814,6 10.5,6 C8.01471863,6 6,8.01471863 6,10.5 C6,12.9852814 8.01471863,15 10.5,15 Z"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class="c3 c4"
      >
        <th
          class="c11"
          scope="row"
        >
          <div
            class="c12"
          >
            <span
              class="c13"
            >
              Alpha
            </span>
          </div>
        </th>
      </tr>
      <tr
        class="c3 c4"
      >
        <th
          class="c11"
          scope="row"
        >
          <div
            class="c12"
          >
            <span
              class="c13"
            >
              beta
            </span>
          </div>
        </th>
      </tr>
      <tr
        class="c3 c4"
      >
        <th
          class="c11"
          scope="row"
        >
          <div
            class="c12"
          >
            <span
              class="c13"
            >
              []
            </span>
          </div>
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable search 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <table
    class="StyledDataTable-xrlyjm-0 tpKnu StyledTable-sc-1m3u5g-6 fGUmP"
  >
    <thead
      class="StyledDataTable__StyledDataTableHeader-xrlyjm-3 gtdqEW StyledTable__StyledTableHeader-sc-1m3u5g-4 dHaGyd"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 dBBtdf StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 hNAgVv"
          scope="col"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jPmsAr"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 lgPVDc"
            >
              <span
                class="StyledText-sc-1sadyjn-0 fWSbXS"
              >
                A
              </span>
            </div>
            .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 12px;
  padding-right: 12px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
}

@media only screen and (max-width:768px) {
  .c0 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c0 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

<div
              class="c0"
            >
              <span
                class="c1"
              >
                [
              </span>
            </div>
            .c1 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: rgba(0,0,0,0.33);
  stroke: rgba(0,0,0,0.33);
}

.c1 g {
  fill: inherit;
  stroke: inherit;
}

.c1 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c1 *[stroke*="#"],
.c1 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c1 *[fill-rule],
.c1 *[FILL-RULE],
.c1 *[fill*="#"],
.c1 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c0:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

<button
              aria-label="focus-search-a"
              class="c0"
              type="button"
            >
              <svg
                aria-label="FormSearch"
                class="c1"
                viewBox="0 0 24 24"
              >
                <path
                  d="M13.8,13.8 L18,18 L13.8,13.8 Z M10.5,15 C12.9852814,15 15,12.9852814 15,10.5 C15,8.01471863 12.9852814,6 10.5,6 C8.01471863,6 6,8.01471863 6,10.5 C6,12.9852814 8.01471863,15 10.5,15 Z"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="StyledDataTable__StyledDataTableBody-xrlyjm-2 bFXxPv StyledTable__StyledTableBody-sc-1m3u5g-3 dwInxx"
    >
      .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c1 {
  height: 100%;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c0:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

@media only screen and (max-width:768px) {
  .c3 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<tr
        class="c0 c1"
      >
        <th
          class="c2"
          scope="row"
        >
          <div
            class="c3"
          >
            <span
              class="c4"
            >
              []
            </span>
          </div>
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable sort 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  width: 100%;
  height: 100%;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c10 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c4 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c9 {
  font-size: 18px;
  line-height: 24px;
}

.c12 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c7 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  width: 100%;
  height: 100%;
  max-width: none;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

.c6 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  height: 100%;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c3:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

@media only screen and (max-width:768px) {
  .c11 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  class="c0"
>
  <table
    class="c1 c2"
  >
    <thead
      class=""
    >
      <tr
        class="c3 c4"
      >
        <th
          class="c5"
          scope="col"
        >
          <button
            class="c6 c7"
            type="button"
          >
            <div
              class="c8"
            >
              <span
                class="c9"
              >
                A
              </span>
            </div>
          </button>
        </th>
        <th
          class="c5"
          scope="col"
        >
          <button
            class="c6 c7"
            type="button"
          >
            <div
              class="c8"
            >
              <span
                class="c9"
              >
                B
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class="c3 c4"
      >
        <th
          class="c10"
          scope="row"
        >
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              zero
            </span>
          </div>
        </th>
        <td
          class="c10"
        >
          <div
            class="c11"
          >
            <span
              class="c9"
            >
              0
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="c3 c4"
      >
        <th
          class="c10"
          scope="row"
        >
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              one
            </span>
          </div>
        </th>
        <td
          class="c10"
        >
          <div
            class="c11"
          >
            <span
              class="c9"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="c3 c4"
      >
        <th
          class="c10"
          scope="row"
        >
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              two
            </span>
          </div>
        </th>
        <td
          class="c10"
        >
          <div
            class="c11"
          >
            <span
              class="c9"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable sort 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <table
    class="StyledDataTable-xrlyjm-0 tpKnu StyledTable-sc-1m3u5g-6 fGUmP"
  >
    <thead
      class="StyledDataTable__StyledDataTableHeader-xrlyjm-3 gtdqEW StyledTable__StyledTableHeader-sc-1m3u5g-4 dHaGyd"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 dBBtdf StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 hNAgVv"
          scope="col"
        >
          <button
            class="Sorter__SorterButton-fzr2yb-0 bVTNxY StyledButton-sc-323bzc-0 gSzznR"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 fAhsMq"
            >
              <span
                class="StyledText-sc-1sadyjn-0 fWSbXS"
              >
                A
              </span>
              .c0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 6px;
}

<div
                class="c0"
              />
              .c0 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c0 g {
  fill: inherit;
  stroke: inherit;
}

.c0 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c0 *[stroke*="#"],
.c0 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c0 *[fill-rule],
.c0 *[FILL-RULE],
.c0 *[fill*="#"],
.c0 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

<svg
                aria-label="FormDown"
                class="c0"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </th>
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 hNAgVv"
          scope="col"
        >
          <button
            class="Sorter__SorterButton-fzr2yb-0 bVTNxY StyledButton-sc-323bzc-0 gSzznR"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 fAhsMq"
            >
              <span
                class="StyledText-sc-1sadyjn-0 fWSbXS"
              >
                B
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class="StyledDataTable__StyledDataTableBody-xrlyjm-2 bFXxPv StyledTable__StyledTableBody-sc-1m3u5g-3 dwInxx"
    >
      .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c1 {
  height: 100%;
}

.c5 {
  font-size: 18px;
  line-height: 24px;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c0:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

@media only screen and (max-width:768px) {
  .c3 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<tr
        class="c0 c1"
      >
        <th
          class="c2"
          scope="row"
        >
          <div
            class="c3"
          >
            <span
              class="c4"
            >
              one
            </span>
          </div>
        </th>
        <td
          class="c2"
        >
          <div
            class="c3"
          >
            <span
              class="c5"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 dBBtdf StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
          scope="row"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bnqisW"
            >
              two
            </span>
          </div>
        </th>
        <td
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fWSbXS"
            >
              2
            </span>
          </div>
        </td>
      </tr>
      .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c1 {
  height: 100%;
}

.c5 {
  font-size: 18px;
  line-height: 24px;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c0:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

@media only screen and (max-width:768px) {
  .c3 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<tr
        class="c0 c1"
      >
        <th
          class="c2"
          scope="row"
        >
          <div
            class="c3"
          >
            <span
              class="c4"
            >
              zero
            </span>
          </div>
        </th>
        <td
          class="c2"
        >
          <div
            class="c3"
          >
            <span
              class="c5"
            >
              0
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
